Styling issue of border visibility on attendance record and daily list view components fixed -- angular/frontend

--- a/angular/frontend/src/app/authenticated-user/scheduling/attendance/attendance-record/attendance-record.component.css
+++ b/angular/frontend/src/app/authenticated-user/scheduling/attendance/attendance-record/attendance-record.component.css
@@ -3,7 +3,6 @@
 h2, h3, h5 {
   text-align: center;
   color: #758d97; 
-  background-color: black !important;
 }
 
 table {
@@ -36,7 +35,6 @@ p {
 }
 
 .row {
-  background-color: black !important;
   color: #758d97; 
 }
 
@@ -63,14 +61,13 @@ hr.thick-br {
   
   @media screen and (min-width: 993px) {
     .jumbotron {
-        margin: 30px;
-        color: #758d97;
-        max-width: 1400px;
+      margin: 30px;
+      color: #758d97;
+      max-width: 1400px;
       min-width: 700px;
     }
     .attendance {
       margin-top: 30px;
-      background-color: black;
       align-items: center;
       color: grey;
       height: 100px;
@@ -83,7 +80,6 @@ hr.thick-br {
   @media screen and (min-width: 768px) and (max-width: 992px) {
     .jumbotron {
       margin: 30px;
-      background: black !important;
       color: #758d97;
       width: 95%;
       max-width: 900px;
@@ -91,7 +87,6 @@ hr.thick-br {
     }
   
     .attendance {
-      background: black !important;
       outline: 1px solid grey;
       margin: 20px;
       color: #758d97;
