--- a/angular/frontend/src/app/authenticated-user/scheduling/classes/daily/daily-list/daily-list.component.css
+++ b/angular/frontend/src/app/authenticated-user/scheduling/classes/daily/daily-list/daily-list.component.css
@@ -28,12 +28,11 @@ table {
 }
 
 .row {
-    background-color: black !important;
     color: #758d97; 
+    background-color: black;
 }
 
 .col {
-    background-color: black !important;
     color: #758d97; 
 }
 
